Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriPriBooleanRetNumObj.quorum
class Main
    action Main
        boolean one = true
        boolean two = true
        Yoda<boolean, boolean, Number> yoda
        Number ret = yoda:useForce(one, two)
        output "passed"
     end
end
