Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriBooleanRetNumObjFail.quorum
class Main
    action Main
        boolean one = true
        boolean two = true
        Yoda<boolean, boolean, Number> yoda
        boolean wrongRet = yoda(one, two)
     end
end
